# ice

./: .gitignore  .gitmodules  Cargo.toml
src/: amount.rs  block_chain.rs  coins.rs  incremental_tree.rs  main.rs  main_impl.rs  sapling_witness.rs  script.rs  sendmany.rs  transaction.rs  transaction_builder.rs  txmempool.rs  wallet.rs  zkp.rs
src/incremental_tree/: merkle_tree.rs  mod.rs  sapling.rs  serialize.rs  tree.rs
src/key/: address.rs  key_management.rs  key_store.rs  mod.rs  proof.rs
src/my/: constants.rs
src/other/: mod.rs  sanity_check.rs
