[package]
name = "ice"
version = "0.1.0"
authors = ["= <=>"]
edition = "2018"

[dependencies]
zip32 = { path = "../librustzcash/zip32" }
pairing = { path = "../librustzcash/pairing" }
librustzcash = { path = "../librustzcash/librustzcash" }
zcash_primitives = { path = "../librustzcash/zcash_primitives" }
sapling-crypto = { path = "../librustzcash/sapling-crypto" }
bigint = "1.0"
log = "0.4"
