[package]
name = "ice"
version = "0.1.0"
authors = ["= <=>"]
edition = "2018"

[dependencies]
zip32 = { path = "ct-lib/zip32" }
pairing = { path = "ct-lib/pairing" }
ff = { path = "ct-lib/ff" }
librustzcash = { path = "ct-lib/librustzcash" }
zcash_primitives = { path = "ct-lib/zcash_primitives" }
sapling-crypto = { path = "ct-lib/sapling-crypto" }

bech32 = "0.6.0"
bigint = "1.0"
ethereum-types = "0.4"
log = "0.4"
serde_json = "1.0"
